--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
 .App {
-  text-align: center;
+  width: 100vw;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  margin: 0;
+  padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar {
+  background-color: #021E39;
+  width: 100%;
+  height: 80px;
+  font-family: Arial, Helvetica, sans-serif;
   display: flex;
-  flex-direction: column;
+}
+
+.navbar .leftSide {
+  flex: 50%;
+  display: flex;
+  justify-content: left;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.navbar .leftSide .links {
+  max-height: 80px;
+
+}
+
+.navbar .leftSide .links a {
+  text-decoration: none;
   color: white;
+  font-size: 25px;
+  margin-left: 15px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar .rightSide {
+  flex: 50%;
 }
