--- a/src/App.css
+++ b/src/App.css
@@ -18,18 +18,21 @@ button:hover {
   height: 80px;
   font-family: Arial, Helvetica, sans-serif;
   display: flex;
+  
 }
+
+/* LEFT SIDE NAVBAR */
 
 .navbar .leftSide {
   flex: 50%;
   display: flex;
   justify-content: left;
   align-items: center;
+  transition: 0.7s;
 }
 
 .navbar .leftSide .links {
   max-height: 80px;
-
 }
 
 .navbar .leftSide .links a {
@@ -38,6 +41,18 @@ button:hover {
   font-size: 25px;
   margin-left: 15px;
 }
+
+.navbar .leftSide button {
+  display: none;
+  margin-left: 20px;
+}
+
+.navbar .leftSide #hidden {
+  display: flex;
+}
+
+
+/* RIGHT SIDE NAVBAR */
 
 .navbar .rightSide {
   flex: 50%;
@@ -64,3 +79,46 @@ button:hover {
 
 }
 
+@media only screen and (max-width: 950px) {
+  .navbar .leftSide .links a {
+    font-size: 20px;
+    transition: 0.7s;
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  .navbar .leftSide .links a {
+    font-size: 15px;
+    transition: 0.7s;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  .navbar .leftSide button {
+    display: flex;
+    transition: 0.7s;
+  }
+
+  .navbar .leftSide .links {
+    display: none;
+  }
+
+  .navbar .leftSide #hidden {
+    position: absolute;
+    left: 0px;
+    top: 80px;
+    height: 230px;
+    max-height: 230px;
+    width: 100%;
+    background-color: #021E39;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .navbar .leftSide #hidden a {
+    margin: 10px;
+    font-size: 25px;
+
+  }
+}
